code is completed

--- a/calculator/style.css
+++ b/calculator/style.css
@@ -5,32 +5,75 @@
     box-sizing: border-box;
 }
 body{
-    background-color: rgb(0, 35, 88);
+   background:#1d2229
 }
 .main{
-    background-color: rgb(71, 71, 47);
-    width:300px;
-    min-height:450px;
-    padding:10px 15px;
+    background-color:transparent;
+    width:350px;
+    min-height:520px;
+    padding:15px;
     margin: 100px auto;
-    overflow: hidden;
+    border: 1px solid rgba(255, 255, 255, 0.26);
+    border-radius:20px;
+
+  
 }
-.display input{
+ #input-box{
     width:100%;
-    height: max-content;
-    background-color: black;
+    height: 80px;
+    background-color: transparent;
+font-size: 40px;
+    color: aliceblue;
+    cursor: pointer;
+
+
 }
 input{
+    background-color: transparent;
    width:60px;
    height:60px;
    padding:20px;
-   font-size:15px;
+   font-size:35px;
    margin-top:10px;
    margin:2px;
+   text-align: end;
+   border: none;
    
+}
+.buttons{
+    width:100%;
+
 }
 .buttons input{
     margin-top: 18px;
-    background-color: rgb(27, 27, 27);
+    cursor: pointer;
     color: aliceblue;
+   
+    border:none;
+    background-color: transparent;
+  box-shadow:-8px -8px 15px rgba(255,255,255,0.1);
+  padding: 5px;
+    font-size:25px;
+    text-align: center;
+    margin-right: 14px;;
+ 
+}
+#equal{
+    background-color: rgb(247, 135, 7);
+}
+#ac{
+    color: rgb(0, 209, 0);
+}
+#del{
+    color: rgb(231, 0, 0);
+}
+p{
+ 
+    color:aliceblue;
+    text-align: center;
+    font-size: 14px;
+
+}
+p:hover{
+    color: rgb(255, 121, 31);
 }
