--- a/calculator/style.css
+++ b/calculator/style.css
@@ -1,79 +1,84 @@
-*{
-    margin:0px;
-    padding:0px;
+* {
+    margin: 0px;
+    padding: 0px;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     box-sizing: border-box;
 }
-body{
-   background:#1d2229
+body {
+    background: #1d2229;
 }
-.main{
-    background-color:transparent;
-    width:350px;
-    min-height:520px;
-    padding:15px;
+.main {
+    background-color: transparent;
+    width: 350px;
+    min-height: 400px;
+    padding: 15px;
     margin: 100px auto;
     border: 1px solid rgba(255, 255, 255, 0.26);
-    border-radius:20px;
-
-  
+    border-radius: 20px;
+    overflow: hidden;
 }
- #input-box{
-    width:100%;
+#input-box {
+    width: 100%;
     height: 80px;
     background-color: transparent;
-font-size: 40px;
+    font-size: 40px;
     color: aliceblue;
     cursor: pointer;
-
-
+    text-align: right;
+    padding-right: 10px; /* Add padding for better appearance */
 }
-input{
+.buttons {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr); /* 4 buttons in a row */
+    gap: 10px; /* Space between buttons */
+    width: 100%;
+    margin-top: 15px;
+}
+.buttons input {
     background-color: transparent;
-   width:60px;
-   height:60px;
-   padding:20px;
-   font-size:35px;
-   margin-top:10px;
-   margin:2px;
-   text-align: end;
-   border: none;
-   
-}
-.buttons{
-    width:100%;
-
-}
-.buttons input{
-    margin-top: 18px;
+    height: 60px;
+    font-size: 25px;
     cursor: pointer;
     color: aliceblue;
-   
-    border:none;
-    background-color: transparent;
-  box-shadow:-8px -8px 15px rgba(255,255,255,0.1);
-  padding: 5px;
-    font-size:25px;
+    border: none;
     text-align: center;
-    margin-right: 14px;;
- 
+    border-radius: 10px;
+    box-shadow: -8px -8px 15px rgba(255, 255, 255, 0.1);
 }
-#equal{
+#equal {
     background-color: rgb(247, 135, 7);
+    color: #fff;
 }
-#ac{
+#ac {
     color: rgb(0, 209, 0);
 }
-#del{
+#del {
     color: rgb(231, 0, 0);
 }
-p{
- 
-    color:aliceblue;
+p {
+    color: aliceblue;
     text-align: center;
     font-size: 14px;
-
 }
-p:hover{
+p:hover {
     color: rgb(255, 121, 31);
+}
+
+/* Media Query for Smaller Screens */
+@media screen and (max-width: 480px) {
+    .main {
+        width: 90%; /* Adjust main container width */
+        margin: 50px auto; /* Reduce top margin */
+    }
+
+    #input-box {
+        height: 60px; /* Reduce input box height */
+        font-size: 30px; /* Adjust font size */
+    }
+
+    .buttons input {
+       
+        height: 40px; /* Reduce button height */
+        font-size: 20px; /* Adjust button font size */
+    }
 }
