--- a/calculator/style.css
+++ b/calculator/style.css
@@ -20,12 +20,13 @@ body {
 #input-box {
     width: 100%;
     height: 80px;
-    background-color: transparent;
+    background-color:black;
     font-size: 40px;
     color: aliceblue;
     cursor: pointer;
     text-align: right;
-    padding-right: 10px; /* Add padding for better appearance */
+    padding-right: 10px;
+    border:none; /* Add padding for better appearance */
 }
 .buttons {
     display: grid;
@@ -40,7 +41,7 @@ body {
     font-size: 25px;
     cursor: pointer;
     color: aliceblue;
-    border: none;
+    border:none;
     text-align: center;
     border-radius: 10px;
     box-shadow: -8px -8px 15px rgba(255, 255, 255, 0.1);
