--- a/cryptosite/style.css
+++ b/cryptosite/style.css
@@ -9,6 +9,7 @@
 html, body {
     width: 100%;
     background-color: #ffffff;
+    
 }
 
 /* Navigation Bar */
@@ -62,7 +63,7 @@ html, body {
 }
 
 /* Main Section */
-.main {
+#main {
     width: 100%;
     display: flex;
     background-color: #fff;
@@ -110,6 +111,15 @@ html, body {
     color: #fff;
     border: none;
     border-radius: 6px;
+}
+.cursor{
+    height:30px;
+    width:30px;
+    background-color: rgb(255, 232, 24);
+    border-radius: 50%;
+    position: absolute;
+    transition: 0.1s;
+    mix-blend-mode: difference;
 }
 
 /* Media Queries */
