--- a/E-commerce/style.css
+++ b/E-commerce/style.css
@@ -1,15 +1,19 @@
 
-@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
-*{
+* {
     padding:0px;
     margin:0px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
- 
+    font-family: "Roboto", serif;
+    font-optical-sizing: auto;
+    font-weight: 100;
+    font-style: normal;
 }
+
 body{
     height:100%;
     width:100%;
-    font-family: 'Inter', sans-serif;
+
+  
+   
 }
 .navbar{
     width:100%;
@@ -17,11 +21,12 @@ body{
     justify-content: space-between;
     display: flex;
     align-items: center;
-    background-color: rgb(255, 211, 211);
-
+    background-color:#6A89A7;
+    box-shadow: 8px 8px 8px rgba(0, 0, 0, 0.3), -2px -2px 4px rgb(20, 20, 20);
+    
 }
 .logo{
-    padding:25px;
+    padding:15px;
 }
 .listitems {
     display: flex;
@@ -30,6 +35,11 @@ body{
 }
 .listitems li a{
     text-decoration: none;
+    color: white;
+}
+.listitems li a:hover{
+    border-bottom: 2px solid rgb(255, 196, 3);
+   
 }
 .menu{
     display: none;
@@ -38,8 +48,12 @@ body{
     display: flex;
     align-items: center;
     list-style: none;
-text-decoration: none;
+    text-decoration: none;
     padding:15px;
+}
+.logo img{
+    height:150px;
+    width:auto;
 }
 #sidebar{
     background-color: rgba(255, 255, 255, 0.5); /* White with 50% transparency */
@@ -47,18 +61,17 @@ text-decoration: none;
 position:fixed;
     top:0px;
     right:0px;
+    width: 130px;
     height:100vh;
     display: flex;
     flex-direction: column;
     text-align: center;
-
     list-style: none;
     text-decoration:none;
     display: none;
  transition: 5s;
  padding: 0px 50px;
-
-  
+ z-index: 999;
 }
 .sidenavitems a:hover{
  
@@ -80,6 +93,7 @@ position:fixed;
    margin-top: 10px;
 
 }
+
 @media screen and (max-width:760px)
 {
    .listitems{
@@ -89,29 +103,40 @@ position:fixed;
     display:block;
     font-size: larger;
 }
-@media screen and (max-width:400px){
-   #sidebar{
-    width: 75%;
- position: absolute;
-
-   }
 }
-
-}
-.main{
-    height: 100%;
+@media screen and (max-width:450px){
+  #sidebar{
     width: 100%;
+    padding: 0px;
+  
 }
-.main img{
- width: 100%;
- min-height: 40vh;
- object-fit: cover;
+
+}
+@media screen and (max-width:600px){
+    .banner img{
+      object-position: right;
  
+  }
+  
+  }
+.main{
+  position: relative;
+    width: 100%;
+    border: 2px solid salmon;
+
+}
+.banner {
+    position:absolute;
+    
+}
+.banner img{
+    width:100%;
+   min-height: 40vh;
+   object-fit: cover;
    
 }
-.text{
-    font-size:70px;
-    position: relative;
-    top:40%;
-    left: 2%;
+.banner h1{
+    position: absolute;
+    top:50px;
+
 }
