--- a/E-commerce/style.css
+++ b/E-commerce/style.css
@@ -21,7 +21,7 @@ body{
     justify-content: space-between;
     display: flex;
     align-items: center;
-    background-color:#6A89A7;
+    background-color:#006888fb;
     box-shadow: 8px 8px 8px rgba(0, 0, 0, 0.3), -2px -2px 4px rgb(20, 20, 20);
     
 }
@@ -52,7 +52,7 @@ body{
     padding:15px;
 }
 .logo img{
-    height:150px;
+    height:180px;
     width:auto;
 }
 #sidebar{
@@ -112,31 +112,52 @@ position:fixed;
 }
 
 }
-@media screen and (max-width:600px){
+@media screen and (max-width:680px){
     .banner img{
       object-position: right;
  
   }
+  .content h1{
   
+  }
   }
 .main{
   position: relative;
+
     width: 100%;
     border: 2px solid salmon;
 
 }
 .banner {
     position:absolute;
+    background-color: rgb(0, 0, 0);
     
 }
 .banner img{
     width:100%;
    min-height: 40vh;
    object-fit: cover;
+   opacity:50%;
+   
    
 }
-.banner h1{
+.content {
     position: absolute;
-    top:50px;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-align: center;
+  color: white;
+  width: 100%;
 
+
+
+
+}
+.content h1{
+  color: rgb(253, 172, 22);
+  font-weight: 800;
+  font-size: 3.5rem;
+  margin-bottom: 20px;
+  
 }
