--- a/sps-game/style.css
+++ b/sps-game/style.css
@@ -78,10 +78,15 @@ button img{
     width: 100px;
     height: 100px;
 }
-.move-box img {
-  width: 50px;
-  height: 50px;
-  margin-top: 0px;
+.move-box{
+  width:90px;
+  min-height: 90px;
 }
+.move-box img {
+  width: 80px;
+  height: 80px;
+ 
+}
+
 
 }
