--- a/sps-game/style.css
+++ b/sps-game/style.css
@@ -15,7 +15,7 @@ body{
     color: aliceblue;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     text-align: center;
-    font-size: 50px;
+    font-size: 5rem;
     margin-top: 20px;
 }
 .game{
@@ -40,8 +40,8 @@ button img{
   display: flex;
   justify-content: center;
   gap: 50px;
-  margin-top: 30px;
-  flex-wrap: wrap;
+  margin-top: 50px;
+  flex-wrap:wrap-reverse;
 }
 
 .move-box {
@@ -78,9 +78,15 @@ button img{
     width: 100px;
     height: 100px;
 }
+.heading{
+  font-size: 38px;
+}
+.move{
+  margin-top: 0px;
+}
 .move-box{
-  width:90px;
-  height: fit-content;
+  width:150px;
+  
 }
 .move-box img {
   width: 80px;
