--- a/movies-app/index.css
+++ b/movies-app/index.css
@@ -13,6 +13,7 @@ overflow-x: hidden;
 .main{
  
     width:100%;
+    min-height: 100vh;
     background-color: rgb(37, 1, 1);
     display:flex;
     flex-direction: column;
@@ -44,6 +45,7 @@ overflow-x: hidden;
     border-radius: 18px;
     padding:18px;
     outline:none;
+    font-size: 1.2rem;
    
 
 }
@@ -51,6 +53,7 @@ overflow-x: hidden;
     border:0px solid white;
     height:370px;
     border-radius: 10px;
+    
     
     position:relative;
     transition: all ease-out 0.4s;
@@ -86,15 +89,19 @@ width:100%;
     top:370px;
     transition:all ease-in-out 0.3s;
 height:100%;
+max-width: 100%;
 backdrop-filter: blur(10px);
-   
-
+/* display: flex;
+flex-direction: column;
+flex-wrap: wrap; */
 }
 
 .title{
     margin-bottom: 8px;
     display:flex;
     justify-content: space-between;
+       
+
 }
 
 .img-container:hover .img-info{
@@ -102,8 +109,19 @@ backdrop-filter: blur(10px);
 top:0px;
 
 }
-.heading{
-    margin-bottom: 20px;
-    color:rgb(255, 196, 0);
-    font-size: 1.4rem;
+button{
+    padding:14px;
+    outline:none;
+    border:none;
+    color: orangered;
+    background-color: black;
+    margin-bottom: 1.15rem;
+    font-size:1.1rem;
+    border-radius: 15px;
+    transition:all ease-in-out 0.3s
+}
+button:hover{
+    color: rgb(255, 0, 0);
+    transform:scale(1.07);
+
 }
